# ratatoskr

./: .gitignore  Cargo.toml  NOTICE  PROVENANCE.md  README.md  SCOPE.md  task.md  task.yaml  trace.md
docs/: PROVENANCE.md  README.md  TASK.md  TRACE.md
src/: citation.rs  engine.rs  engine_llamacpp.rs  execute.rs  fur_atom.rs  fur_bridge.rs  fur_logger.rs  interactive.rs  main.rs  task.rs  trace.rs  validate.rs
